# networking-sfc

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  lower-constraints.txt  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
api-ref/source/: conf.py  index.rst  parameters.yaml  sfc-chains.inc  sfc-classifiers.inc  sfc-port-pair-groups.inc  sfc-port-pairs.inc
devstack/: README.md  devstackgaterc  plugin.sh  post_test_hook.sh  pre_test_hook.sh  settings
doc/: requirements.txt
doc/api_samples/sfc-chains/: port-chain-create-req.json  port-chain-create-resp.json  port-chain-get-resp.json  port-chain-list-resp.json
doc/api_samples/sfc-classifiers/: flow-classifier-create-req.json  flow-classifier-create-resp.json  flow-classifier-get-resp.json  flow-classifier-list-resp.json  flow-classifier-update-req.json
doc/api_samples/sfc-port-pair-groups/: port-pair-group-get-resp.json  port-pair-group-list-resp.json  port-pair-group-update-req.json
doc/api_samples/sfc-port-pairs/: port-pair-create-req.json  port-pair-list-resp.json  port-pair-update-req.json  port-pair-update-resp.json
doc/api_samples/sfc-service-graphs/: service-graph-create-req.json  service-graph-create-resp.json  service-graph-list-resp.json  service-graph-update-req.json  service-graph-update-resp.json
doc/source/: alembic_migration.rst  api.rst  command_extensions.rst  conf.py  contribution.rst  index.rst  installation.rst  ovs_driver_and_agent_workflow.rst  port_chain_system_and_flow.rst  portchain-ovs-driver-agent.rst  sfc_non_transparent_sf.rst  sfc_ovn_driver.rst  sfc_port_chain_tap.rst  system_design and_workflow.rst  system_design_and_workflow.rst  usage.rst
doc/source/configuration/: index.rst  networking-sfc.rst  policy-sample.rst  policy.rst
doc/source/configuration/samples/: networking-sfc.rst
doc/source/contributor/: alembic_migration.rst  api.rst  contribution.rst  ietf_sfc_encapsulation.rst  index.rst  ovs_symmetric_port_chain.rst  sfc_non_transparent_sf.rst  sfc_ovn_driver.rst  sfc_port_chain_tap.rst  sfc_proxy_port_correlation.rst  system_design_and_workflow.rst
doc/source/install/: configuration.rst  index.rst  install.rst
doc/source/user/: command_extensions.rst  index.rst  usage.rst
etc/: README.txt  flowclassifier_driver.ini.sample  sfc_driver.ini.sample
etc/neutron/rootwrap.d/: networking-sfc.filters
etc/oslo-config-generator/: flowclassifier_driver.ini  networking-sfc.conf  sfc_driver.ini
etc/oslo-policy-generator/: policy.conf
networking_sfc/: __init__.py  _i18n.py  opts.py  version.py
networking_sfc/cli/: flow_classifier.py  port_chain.py  port_pair.py  port_pair_group.py
networking_sfc/db/: flowclassifier_db.py  sfc_db.py
networking_sfc/db/migration/: README
networking_sfc/db/migration/alembic_migrations/: env.py  script.py.mako
networking_sfc/db/migration/alembic_migrations/versions/: CONTRACT_HEAD  EXPAND_HEAD  HEADS  start_networking_sfc.py
networking_sfc/db/migration/models/: head.py
networking_sfc/extensions/: flowclassifier.py  servicegraph.py  sfc.py  tap.py
networking_sfc/hacking/: checks.py
networking_sfc/osc/: common.py  plugin.py
networking_sfc/osc/flow_classifier/: flow_classifier.py
networking_sfc/osc/sfc/: port_chain.py  port_pair.py  port_pair_group.py
networking_sfc/policies/: __init__.py  flow_classifier.py  port_chain.py  port_pair.py  port_pair_group.py  service_graph.py
networking_sfc/services/flowclassifier/: driver_manager.py  plugin.py
networking_sfc/services/flowclassifier/common/: config.py  context.py  exceptions.py
networking_sfc/services/flowclassifier/drivers/: base.py
networking_sfc/services/flowclassifier/drivers/dummy/: dummy.py
networking_sfc/services/sfc/: driver_manager.py  plugin.py
networking_sfc/services/sfc/agent/: __init__.py  agent.py  br_int.py  br_phys.py  br_tun.py
networking_sfc/services/sfc/agent/extensions/: sfc.py
networking_sfc/services/sfc/common/: config.py  context.py  exceptions.py  ovs_ext_lib.py
networking_sfc/services/sfc/drivers/: base.py
networking_sfc/tests/: base.py
networking_sfc/tests/contrib/: README  gate_hook.sh  post_test_hook.sh
networking_sfc/tests/contrib/hooks/: api_extensions  ovs
networking_sfc/tests/functional/: test_service.py
networking_sfc/tests/functional/agent/: test_l2_ovs_agent.py
networking_sfc/tests/functional/db/: test_migrations.py  test_models.py
networking_sfc/tests/tempest_plugin/: plugin.py
networking_sfc/tests/tempest_plugin/services/: flowclassifier_client.py  sfc_client.py
networking_sfc/tests/tempest_plugin/tests/: flowclassifier_client.py  sfc_client.py
networking_sfc/tests/unit/: test_networking_sfc.py
networking_sfc/tests/unit/cli/: test_flow_classifier.py  test_port_chain.py  test_port_pair.py  test_port_pair_group.py
networking_sfc/tests/unit/db/: test_flowclassifier_db.py  test_migrations.py  test_sfc_db.py
networking_sfc/tests/unit/extensions/: test_flowclassifier.py  test_servicegraph.py  test_sfc.py  test_tap.py
networking_sfc/tests/unit/hacking/: test_checks.py
networking_sfc/tests/unit/osc/: fakes.py
playbooks/legacy/networking-sfc-functional-dsvm/: run.yaml
playbooks/legacy/networking-sfc-periodic-tempest-dsvm/: run.yaml
playbooks/legacy/networking-sfc-tempest-dsvm/: run.yaml
playbooks/legacy/networking-sfc-tempest-dsvm-multinode/: run.yaml
releasenotes/notes/: drop-py27-support-4670c8cdcfa3ba78.yaml  drop-py39-75464b9599f01754.yaml  eventlet-removal-bee388f6861026d2.yaml  mpls-correlation-c36070eba63b9f87.yaml  networking-sfc-0151b67501c641ef.yaml  service-graphs-4a1e54f6bbbfe805.yaml  sfc-tap-port-pair-db6b2f3d29520c9b.yaml  unique-correlation-in-ppg-96d803a244425f66.yaml
releasenotes/source/: conf.py  index.rst  newton.rst
tools/: check_unit_test_structure.sh  configure_for_func_testing.sh  deploy_rootwrap.sh  pretty_tox.sh  pretty_tox_py34.sh  subunit-trace.py  tox_install.sh
zuul.d/: jobs.yaml  project.yaml  projects.yaml
(+50 files in other folders)
